// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assets 1`] = `
"import font from './__tests__/fixtures/cVoexIsj.woff';
import image from './__tests__/fixtures/bAFTozQS.png';
import deep from './__tests__/fixtures/ceBqZEDY.gif';
import style from './__tests__/fixtures/vAjnOYXZ.css';

var assets = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assets;
"
`;

exports[`Assets written to subfolder 1`] = `
"import font from './static/__tests__/fixtures/static/cVoexIsj.woff';
import image from './static/__tests__/fixtures/static/bAFTozQS.png';
import deep from './static/__tests__/fixtures/static/ceBqZEDY.gif';
import style from './static/__tests__/fixtures/static/vAjnOYXZ.css';

var assets = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assets;
"
`;

exports[`Keep Name 1`] = `
"import font from './__tests__/fixtures/SourceSerifPro-Bold.ttf_cVoexIsj.woff';
import image from './__tests__/fixtures/image_bAFTozQS.png';
import deep from './__tests__/fixtures/blank_ceBqZEDY.gif';
import style from './__tests__/fixtures/css-font_vAjnOYXZ.css';

var assets = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assets;
"
`;

exports[`Mixed Asset Source Locations 1`] = `
"import font from './__tests__/fixtures/deep/cVoexIsj.woff';
import svg from './__tests__/fixtures/deep/foixBwnR.svg';
import deep from './__tests__/fixtures/deep/ceBqZEDY.gif';
import style from './__tests__/fixtures/deep/vAjnOYXZ.css';

/* eslint-disable filenames/match-regex */

var assetsMixed = \`\${font}|\${svg}|\${deep}|\${style}\`;

export default assetsMixed;
"
`;

exports[`Outside Asset Source Location 1`] = `
"import font from './__tests__/fixtures/deep/cVoexIsj.woff';
import image from './__tests__/fixtures/deep/bAFTozQS.png';
import deep from './__tests__/fixtures/deep/ceBqZEDY.gif';
import style from './__tests__/fixtures/deep/vAjnOYXZ.css';

/* eslint-disable filenames/match-regex */

var assetsOutside = \`\${font}|\${image}|\${deep}|\${style}\`;

export default assetsOutside;
"
`;
